@@ -248,6 +248,14 @@ jobs:
             container: symless/synergy-core:opensuse-amd64
             runs-on: ubuntu-latest
 
+          - name: rockylinux-9-amd64
+            container: symless/synergy-core:rockylinux-9-amd64
+            runs-on: ubuntu-latest
+
+          - name: almalinux-9-amd64
+            container: symless/synergy-core:almalinux-9-amd64
+            runs-on: ubuntu-latest
+
           - name: archlinux-amd64
             container: symless/synergy-core:archlinux-amd64
             runs-on: ubuntu-latest
