@@ -55,3 +55,15 @@ cmake --build build -j8
 ```
 ./build/bin/unittests
 ```
+
+## Packages
+
+To get Synergy, either your favorite package manager to install:
+- `synergy` for Synergy 1 (this repo)
+- `synergy3` for Synergy 3 (non-free)
+
+Alternatively, use the [official packages](https://symless.com/synergy/download).
+
+Synergy 2 is no longer in development and should not be provided.
+
+[![Repology](https://repology.org/badge/vertical-allrepos/synergy.svg?exclude_unsupported=1)](https://repology.org/project/synergy/versions)
